deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-combat
  labels:
    app: k8s-combat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-combat
  template:
    metadata:
      name: k8s-combat
      labels:
        app: k8s-combat
    spec:
      containers:
        - name: k8s-combat
          image: k8s-combat:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
